--- a/Templa.jade
+++ b/Templa.jade
@@ -1,3 +1,5 @@
 template(name='Templa')
-  input
-  h1 {{content}}
+  form
+    input
+    button.btn.btn-primary(type='submit') 作成
+    h1 {{content}}
