レイアウト

--- a/index.jade
+++ b/index.jade
@@ -1,5 +1,7 @@
 head
   title OK
 body
-  +Templa(template='$、はじめました')
+  +Templa(template='$、はじめました' desc='「冷やし中華、はじめました」的なノリで')
+  +Templa(template='$したいだけの人生だった' desc='ノッツさんの「そんな夏休みを過ごしたいだけの人生だった」')
+  +Templa(template='いつから$だと錯覚してた？' desc='「BLEACH』から。藍染惣右介')
   +App
