--- a/Templa.jade
+++ b/Templa.jade
@@ -1,6 +1,8 @@
 template(name='Templa')
   form
-    input
+    input.form-control
     button.btn.btn-primary(type='submit') 作成
     h1 {{content}}
-    p {{desc}}
+    h5
+      small
+        {{desc}}
